# HUD_Qt

./: .gitignore  AGENTS.md  CMakeLists.txt  PLAN.md  README.md  main.cpp
_memory/: ARCHITECTURE.md  PHASE_01_SCAFFOLDING.md  PHASE_02_MODEL.md  PHASE_03_MVVM.md  PHASE_04_NAVIGATION.md  PHASE_05_DASHBOARD.md  PHASE_06_MEDIA.md  PHASE_07_DOCK.md  PHASE_08_ANIMATION.md  PHASE_09_HARDENING.md  PROJECT_STATUS.md
config/: AppConfig.cpp  AppConfig.h  MapConfig.cpp  MapConfig.h  ThemeConfig.cpp  ThemeConfig.h
docs/: RZV2L_DEPLOY.md
model/: PlaylistModel.cpp  PlaylistModel.h  RouteCalculator.cpp  RouteCalculator.h  TelemetryEngine.cpp  TelemetryEngine.h  TelemetryTypes.h
resources/: qml.qrc
scripts/: run_rzv2l.sh
view/: main.qml
view/components/: CarAvatar.qml  CarMarker.qml  DestinationMarker.qml  Dock.qml  EnergyPanel.qml  GlassPanel.qml  IconButton.qml  MapTileLayer.qml  MediaControls.qml  ProgressBar.qml  SpeedGauge.qml  TirePressureCard.qml  TurnIcon.qml
view/config/: Theme.qml
view/overlays/: BottomPanel.qml  CenterPanel.qml  HeaderPanel.qml  SidePanel.qml
view/screens/: DashboardScreen.qml  MediaScreen.qml  NavigationScreen.qml
view/style/: Fonts.qml  Shadows.qml
viewmodel/: BaseViewModel.h  MediaViewModel.cpp  MediaViewModel.h  ScreenViewModel.cpp  ScreenViewModel.h  TelemetryViewModel.cpp  TelemetryViewModel.h
